Fix cropping on card images

--- a/core/sass/international.scss
+++ b/core/sass/international.scss
@@ -39,6 +39,10 @@ li {
   float: right;
 }
 
+.card .card-image {
+  height: 300px;
+}
+
 // Footer
 .global-footer {
   background-color: inherit;
